--- a/index.html
+++ b/index.html
@@ -1,26 +1,86 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Analizer</title> </title>
-    <link href="css/styles.css" rel="stylesheet">
+    <title>Dashboard - Code Analyzer</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-<body class="bg-gray-100">
-    <nav class="bg-white p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
-            <a class="text-xl font-bold text-blue-500" href="#">Mi Proyecto</a>
-            <ul class="flex space-x-4">
-                <li><a href="#" class="text-gray-700 hover:text-blue-500">Inicio</a></li>
-                <li><a href="#" class="text-gray-700 hover:text-blue-500">Características</a></li>
-                <li><a href="#" class="text-gray-700 hover:text-blue-500">Contacto</a></li>
-            </ul>
-        </div>
-    </nav>
 
-    <div class="container mx-auto mt-10">
-        <h1 class="text-3xl font-bold text-gray-800">¡Bienvenido a mi proyecto con Tailwind CSS!</h1>
-        <p class="mt-4 text-gray-600">Este es un proyecto básico utilizando Tailwind, HTML, y JavaScript.</p>
-    </div>
+<body class="bg-blue-900 text-white h-screen flex">
+    <!-- Sidebar -->
+    <aside class="bg-blue-300 text-blue-900 w-1/3 lg:w-1/4 h-full p-8 flex flex-col items-center">
+        <!-- User Profile -->
+        <div class="text-center mb-12">
+            <div class="rounded-full w-24 h-24 border-4 border-blue-900 flex items-center justify-center">
+                <i class="fas fa-user text-6xl"></i>
+            </div>
+            <p class="mt-4 text-lg font-bold">LUIS YAZID <br> ARROYO VASQUEZ</p>
+        </div>
+
+        <!-- Recent Files -->
+        <div class="w-full">
+            <h2 class="text-center text-lg font-semibold mb-4">SUBIDOS RECIENTEMENTE:</h2>
+            <div class="grid grid-cols-2 gap-4">
+                <!-- File Icons -->
+                <div class="flex flex-col items-center">
+                    <i class="fas fa-file-alt text-3xl"></i>
+                    <p class="text-sm mt-2">ARCHIVO1</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <i class="fas fa-file-alt text-3xl"></i>
+                    <p class="text-sm mt-2">ARCHIVO1</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <i class="fas fa-file-alt text-3xl"></i>
+                    <p class="text-sm mt-2">ARCHIVO1</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <i class="fas fa-file-alt text-3xl"></i>
+                    <p class="text-sm mt-2">ARCHIVO1</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <i class="fas fa-file-alt text-3xl"></i>
+                    <p class="text-sm mt-2">ARCHIVO1</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <i class="fas fa-file-alt text-3xl"></i>
+                    <p class="text-sm mt-2">ARCHIVO1</p>
+                </div>
+            </div>
+        </div>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="flex-1 flex flex-col items-center justify-center text-center">
+        <!-- Logout Button -->
+        <div class="absolute top-4 right-8 flex items-center space-x-2">
+            <i class="fas fa-sign-out-alt"></i>
+            <a href="#" class="text-white hover:underline">CERRAR SESIÓN</a>
+        </div>
+
+        <!-- Logo -->
+        <div class="mb-8">
+            <img src="https://placehold.co/150x150" alt="Code Analyzer Logo" class="mx-auto">
+        </div>
+
+        <!-- Title -->
+        <h1 class="text-4xl font-bold mb-8">CODE ANALIZER</h1>
+
+        <!-- Buttons -->
+        <div class="space-y-4">
+            <button
+                class="bg-white text-blue-900 font-bold py-3 px-16 rounded-full hover:bg-transparent hover:text-white border-2 border-white transition">
+                COMPARADOR
+            </button>
+            <button
+                class="bg-white text-blue-900 font-bold py-3 px-16 rounded-full hover:bg-transparent hover:text-white border-2 border-white transition">
+                REPORTES
+            </button>
+        </div>
+    </main>
 </body>
+
 </html>
